# tinyagent

./: .cursorrules  .env.example  .gitignore  .mise.toml  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json  run.py
.github/workflows/: check-pr-title.yml  release-please.yml  run-static-tests.yml  run-unit-tests.yml
config/: default.yaml
src/lace/: dummy.py
tests/: test_dummy.py  test_main.py  test_run.py
