[project]
name = "lace"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Curt Park", email = "www.jwpark.co.kr@gmail.com" },
]
keywords = ["python", "project_template"]
classifiers = []

dependencies = []

[project.scripts]
lace = "lace.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.3",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 128
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src/lace"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/lace"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/lace",
    "--cov-report=term-missing",
    "--cov-report=html",
]